# nabla

./: .gitignore  Cargo.toml  LICENSE  README.md
agent-cli/: Cargo.toml
agent-cli/fixtures/eval/tools/: default-four-tools.jsonl  execute-tools.jsonl  extended-tools.jsonl  read-only-tools.jsonl  write-tools.jsonl
agent-cli/src/: main.rs
agent-cli/src/extensions/: host.rs  types.rs
agent-cli/src/tooling/: bash.rs  edit.rs  find.rs  grep.rs  ls.rs  mod.rs  path_sandbox.rs  read.rs  registry.rs  write.rs
agent-core/: Cargo.toml
agent-core/src/: lib.rs  memory.rs  memory_file.rs  policy.rs  protocol.rs  runtime.rs  tools.rs
agent-llm/: Cargo.toml
agent-llm/src/: lib.rs
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: api.ts  main.tsx  router.tsx  types.ts
apps/web/src/components/: Layout.tsx
apps/web/src/pages/: BriefPage.tsx  PapersPage.tsx  ScreeningPage.tsx  TopicsPage.tsx
cli/: Cargo.toml
cli/src/: cli.rs  commands.rs  eval.rs  main.rs
cli/src/extensions/: mod.rs  types.rs
cli/src/tooling/: bash.rs  edit.rs  find.rs  grep.rs  ls.rs  mod.rs  path_sandbox.rs  read.rs  registry.rs  write.rs
core/: Cargo.toml
core/src/: lib.rs  protocol.rs  tools.rs
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs
crates/sources/: Cargo.toml
crates/sources/src/: arxiv.rs  lib.rs  openalex.rs  pubmed.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: lib.rs
docs/: ARCHITECTURE.md  TOPIC_AGENT_M1_PLAN.md  TOPIC_AGENT_M2_PLAN.md  TOPIC_AGENT_MVP.md  collect-pipeline.md  design.md  eval-plan.md  eval_result_schema.md  evaluation.md
examples/: bio-eval-01.json  bio-eval-02.json  bio-eval-03.json  sample_brief.json
hermes-test/: package-lock.json  package.json
hermes-test/src/: App.tsx  style.css
hermes-test/src-tauri/: Cargo.toml  tauri.conf.json
hermes-test/src-tauri/src/: lib.rs  main.rs
hermes-test/src/components/: ChatWindow.tsx  MessageInput.tsx
llm/: Cargo.toml
llm/src/: lib.rs
pdf-rag-mvp/: .gitignore  Cargo.toml  README.md  pyproject.toml
pdf-rag-mvp/apps/desktop/: package-lock.json  package.json
pdf-rag-mvp/apps/desktop/src/: App.tsx  index.css
pdf-rag-mvp/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
pdf-rag-mvp/apps/desktop/src-tauri/src/: commands.rs  config.rs  lib.rs  state.rs
pdf-rag-mvp/apps/desktop/src/components/: AskPanel.tsx  DocPreview.tsx  SettingsDialog.tsx  Sidebar.tsx  TopBar.tsx
pdf-rag-mvp/crates/cli/: Cargo.toml
pdf-rag-mvp/crates/cli/src/: main.rs
pdf-rag-mvp/crates/contracts/: Cargo.toml
pdf-rag-mvp/crates/contracts/src/: lib.rs
pdf-rag-mvp/crates/core/: Cargo.toml
pdf-rag-mvp/crates/core/src/: lib.rs  structured.rs
pdf-rag-mvp/crates/embedder/: Cargo.toml
pdf-rag-mvp/crates/embedder/src/: api_embedder.rs  hash_embedder.rs  lib.rs
pdf-rag-mvp/crates/hierarchy/: Cargo.toml
pdf-rag-mvp/crates/hierarchy/src/: chunker.rs  lib.rs  summarizer.rs
pdf-rag-mvp/crates/llm/: Cargo.toml
pdf-rag-mvp/crates/llm/src/: api.rs  lib.rs  local_cli.rs
pdf-rag-mvp/crates/parser/: Cargo.toml
pdf-rag-mvp/crates/parser/src/: auto.rs  docling_sidecar.rs  lib.rs  native.rs  sidecar.rs
pdf-rag-mvp/crates/retrieval/: Cargo.toml
pdf-rag-mvp/crates/retrieval/src/: lib.rs  search.rs  store.rs
pdf-rag-mvp/crates/spike/: Cargo.toml
pdf-rag-mvp/crates/spike/src/: lancedb_spike.rs
pdf-rag-mvp/crates/storage/: Cargo.toml
pdf-rag-mvp/crates/storage/src/: lib.rs  repo.rs  schema.rs
pdf-rag-mvp/docs/: architecture.md
pdf-rag-mvp/prompts/: hr-screening.md  research.md
pdf-rag-mvp/scripts/: docling_sidecar.py  mock_sidecar.py
