[package]
name = "nabla-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
nabla-contracts = { path = "../contracts" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tracing = "0.1"
