[package]
name = "nabla-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Claude CLI credential detection for ASCI desktop app"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros"] }
