[package]
name = "nabla-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nabla"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
nabla-adapters = { path = "../adapters" }
nabla-contracts = { path = "../contracts" }
nabla-sources = { path = "../sources" }
nabla-storage = { path = "../storage" }
nabla-workflow = { path = "../workflow" }
serde_json = "1"

