[package]
name = "nabla-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
nabla-adapters = { path = "../adapters" }
nabla-contracts = { path = "../contracts" }
nabla-sources = { path = "../sources" }
nabla-storage = { path = "../storage" }
nabla-workflow = { path = "../workflow" }

[dev-dependencies]
tempfile = "3"
