[package]
name = "nabla-sources"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
nabla-contracts = { path = "../contracts" }
quick-xml = "0.36"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
sha1 = "0.10"
urlencoding = "2"

