[package]
name = "nabla-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
nabla-contracts = { path = "../contracts" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

