[package]
name = "nabla-pdf-rag-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
nabla-pdf-rag-contracts = { path = "../contracts" }
nabla-pdf-rag-core = { path = "../core" }
nabla-pdf-rag-embedder = { path = "../embedder" }
nabla-pdf-rag-hierarchy = { path = "../hierarchy" }
nabla-pdf-rag-parser = { path = "../parser" }
nabla-pdf-rag-storage = { path = "../storage" }
rusqlite.workspace = true
serde_json.workspace = true
uuid.workspace = true
