[package]
name = "nabla-pdf-rag-spike"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "lancedb-spike"
path = "src/lancedb_spike.rs"

[dependencies]
anyhow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
futures.workspace = true
lance-index.workspace = true
lancedb.workspace = true
tokio.workspace = true
