[package]
name = "nabla-pdf-rag-storage"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
nabla-pdf-rag-contracts = { path = "../contracts" }
nabla-pdf-rag-core = { path = "../core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
uuid.workspace = true
