[workspace]

[package]
name = "nabla-pdf-desktop"
version = "0.1.0"
description = "Nabla PDF RAG Desktop"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
anyhow = "1.0"
nabla-pdf-rag-contracts = { path = "../../../crates/contracts" }
nabla-pdf-rag-core = { path = "../../../crates/core" }
nabla-pdf-rag-embedder = { path = "../../../crates/embedder" }
nabla-pdf-rag-hierarchy = { path = "../../../crates/hierarchy" }
nabla-pdf-rag-llm = { path = "../../../crates/llm" }
nabla-pdf-rag-parser = { path = "../../../crates/parser" }
nabla-pdf-rag-retrieval = { path = "../../../crates/retrieval" }
nabla-pdf-rag-storage = { path = "../../../crates/storage" }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2" }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
